<?xml version="1.0" encoding="utf-8"?>
<ScrollView
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@color/white"
	tools:context=".activity.ProjectInfoActivity">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		android:padding="@dimen/dp20">

		<ImageView
			android:id="@+id/img_logo"
			style="@style/ImageLogo"/>

		<it.keybeeproject.keybee.view.TextViewCustom
			style="@style/TextProjectInfoContent"
			android:text="@string/project_info_1"
			android:gravity="center"
			app:custom_font="@string/font_dosis_regular"/>

		<it.keybeeproject.keybee.view.TextViewCustom
			style="@style/TextProjectInfoTitle"
			android:layout_marginTop="@dimen/dp50"
			android:text="@string/why_keybee"
			app:custom_font="@string/font_dosis_semi_bold"/>

		<it.keybeeproject.keybee.view.TextViewCustom
			style="@style/TextProjectInfoContent"
			android:layout_marginTop="@dimen/dp10"
			android:text="@string/project_info_2"
			app:custom_font="@string/font_dosis_regular"/>

		<it.keybeeproject.keybee.view.TextViewCustom
			style="@style/TextProjectInfoTitle"
			android:layout_marginTop="@dimen/dp30"
			android:text="@string/thoughts_from_founder"
			app:custom_font="@string/font_dosis_semi_bold"/>

		<it.keybeeproject.keybee.view.TextViewCustom
			style="@style/TextProjectInfoContent"
			android:layout_marginTop="@dimen/dp10"
			android:text="@string/project_info_3"
			app:custom_font="@string/font_dosis_regular"/>

		<it.keybeeproject.keybee.view.TextViewCustom
			android:id="@+id/text_linkKeybee"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:textColor="@color/colorPrimary"
			android:textSize="@dimen/sp18"
			android:layout_marginTop="@dimen/dp20"
			android:text="@string/link_keybee"
			android:gravity="center"
			app:custom_font="@string/font_dosis_regular"/>
	</LinearLayout>
</ScrollView>
