<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@color/white"
	tools:context="it.keybeeproject.keybee.activity.EnjoyActivity">

	<ScrollView android:layout_width="match_parent"
	            android:layout_height="match_parent"
	            android:layout_above="@+id/text_pageNo">

		<RelativeLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:clipChildren="false"
			android:clipToPadding="false"
			android:paddingBottom="@dimen/dp50">

			<ImageView
				android:id="@+id/img_logo"
				style="@style/ImageLogo"
                android:contentDescription="@string/app_name" />

			<it.keybeeproject.keybee.view.TextViewCustom
				android:id="@+id/text_instruct"
				style="@style/TextInstructHome"
				android:layout_below="@id/img_logo"
				android:text="@string/msg_enjoy"
				app:custom_font="@string/font_dosis_medium" />

			<it.keybeeproject.keybee.view.TextViewCustom
				style="@style/TextInstructHome"
				android:layout_below="@id/text_instruct"
				android:layout_marginTop="@dimen/dp20"
				android:text="@string/m_j"
				android:textSize="@dimen/sp20"
				android:textStyle="bold"
				app:custom_font="@string/font_dosis_bold" />

			<it.keybeeproject.keybee.view.ButtonCustom
				android:id="@+id/button_next"
				style="@style/Button"
				android:layout_width="40dp"
				android:layout_alignParentEnd="true"
				android:layout_alignParentRight="true"
				android:layout_alignParentTop="true"
				android:background="@color/transparent"
				android:onClick="onClickOk"
				android:text="@string/ok"
				android:visibility="visible"
				app:custom_font="@string/font_dosis_medium" />
		</RelativeLayout>
	</ScrollView>

	<it.keybeeproject.keybee.view.TextViewCustom
		android:id="@+id/text_pageNo"
		style="@style/TextPageNo"
		android:layout_alignParentBottom="true"
		android:text="@string/p5_5"
		app:custom_font="@string/font_dosis_medium"/>
</RelativeLayout>
